Add Bootstrap and nav bar

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -1,4 +1,9 @@
 body {
     font-family: sans-serif;
-    font-size: 10em;
+    font-size: 2em;
+}
+
+nav {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1em;
 }
