--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -1,12 +1,18 @@
+#top-section {
+  background-image: linear-gradient(to right, rgb(190, 180, 255) , rgb(162, 224, 255), rgb(252, 202, 255));
+}
+
 /* Introduction */
 body {
     font-family: sans-serif;
     font-size: 2em;
 }
 
-nav {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1em;
+.navbar {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1em;
+  background-color: transparent;
+  box-shadow: none;  /* This takes out the bottom border */
 }
 /* End - Introduction */
 
