Fixing the CSS-only carousel

--- a/src/static/css/carousel.css
+++ b/src/static/css/carousel.css
@@ -44,3 +44,7 @@
       padding: 10px 5px;
       text-align: center;
   }
+
+  .top-section {
+    background: linear-gradient(to right, red , black, rgb(252, 202, 255));
+    }
