--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -1,28 +1,55 @@
-#top-section {
-  background-image: linear-gradient(to right, rgb(190, 180, 255) , rgb(162, 224, 255), rgb(252, 202, 255));
-}
-
 /* Introduction */
 body {
-    font-family: sans-serif;
-    font-size: 2em;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2em;
+}
+
+#top-section {
+  background-image: linear-gradient(to right, rgb(190, 180, 255) , rgb(162, 224, 255), rgb(252, 202, 255));
+  padding-bottom: 30px;
 }
 
 .navbar {
-  font-family: 'Times New Roman', Times, serif;
   font-size: 1em;
+  font-weight: 600;
   background-color: transparent;
   box-shadow: none;  /* This takes out the bottom border */
 }
+
+#introduction-text {
+  font-size: 1.5em;
+  font-weight: 200;
+  color: white;
+  letter-spacing: 1px;
+}
+
+#top-heading {
+  font-weight: 600;
+}
+
+.all-cards-button {
+  background-color: transparent;
+  border: none;
+  padding: 5px 70px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 200;
+  margin: 5px 2px;
+  cursor: pointer;
+  color: white; 
+  border: 2px solid white;
+}
+
 /* End - Introduction */
 
 /* 3D Perspective Card Carousel - https://dev.to/shantanu_jana/3d-image-slider-using-html-css-328b */
 #slider {
     position: relative;
-    /* width: 50%; */
     width: 20%;
     height: 20vw;
-    margin: 150px auto;
+    margin: 60px auto;
     font-family: 'Helvetica Neue', sans-serif;
     perspective: 1400px;
     transform-style: preserve-3d;
