--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -135,6 +135,8 @@ body {
       #s5:checked ~ #slide1 {
     box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
     transform: translate3d(60%, 0, -100px);
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
   }
 
   /* Next to Next Slide */
@@ -145,6 +147,8 @@ body {
       #s5:checked ~ #slide2 {
     box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
     transform: translate3d(100%, 0, -250px);
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
   }
   
   /* Previous to Previous Slide */
@@ -155,6 +159,8 @@ body {
       #s5:checked ~ #slide3 {
     box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
     transform: translate3d(-100%, 0, -250px);
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
   }
   
   /* Previous Slide */
@@ -165,6 +171,8 @@ body {
       #s5:checked ~ #slide4 {
     box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
     transform: translate3d(-60%, 0, -100px);
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
   }
 
   /* when we're on slide 1, wrap slide 5 all the way to the right */
