--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -213,6 +213,16 @@ body {
   
 /* End - 3D Perspective Card Carousel */
 
+/* Top 100 Page*/
+#top-100-text {
+  font-size: 1.2em;
+  font-weight: 200;
+  color: blue;
+  letter-spacing: 1px;
+  margin-top: 30px;
+}
+
+
 /* Flip Card */
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -220,8 +230,8 @@ body {
   
   .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     perspective: 1000px;
   }
   
