--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -239,7 +239,6 @@ body {
   margin: 15px 80px auto auto;
 }
 
-
 /* Flip Card */
   .flip-card {
     background-color: transparent;
@@ -252,10 +251,10 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
   }
 
   .flip-card:hover .flip-card-inner {
@@ -268,16 +267,21 @@ body {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    border-radius: 10px;
   }
   
   .flip-card-front {
-    background-color: #bbb;
-    color: black;
+      background-color: rgb(248, 239, 248);
+  }
+
+  #front-card-text {
+    color: rgb(165, 165, 165);
+    margin: 60px 0 0 60px;
   }
   
   .flip-card-back {
-    background-color: #2980b9;
-    color: white;
+    background-color: white;
+    color: black;
     transform: rotateY(180deg);
   }
   /* End - Flip Card */
