--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -271,17 +271,28 @@ body {
   }
   
   .flip-card-front {
-      background-color: rgb(248, 239, 248);
+      background-color: rgb(255, 216, 255);
   }
 
   #front-card-text {
-    color: rgb(165, 165, 165);
+    background-color: white;
+    color: rgb(59, 59, 59);
+    font-family: 'Jost', sans-serif;
     margin: 60px 0 0 60px;
+    position: absolute;
   }
   
   .flip-card-back {
-    background-color: white;
-    color: black;
+    /* background-color: rgb(248, 239, 248); */
     transform: rotateY(180deg);
+  }
+
+  #back-card-text {
+    color: rgb(59, 59, 59);
+    font-family: 'Jost', sans-serif;
+    font-size: 3em;
+    margin: 60px 60px 0 60px;
+    text-decoration: underline rgb(204, 204, 204);
+    text-decoration-thickness: 5px;
   }
   /* End - Flip Card */
