--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -214,13 +214,19 @@ body {
 /* End - 3D Perspective Card Carousel */
 
 /* Top 100 Page*/
+#top-100-cards {
+  margin: 70px auto auto 100px;
+}
+
+#deck-about {
+  margin-top: 40px;
+}
+
 #deck-subheading {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 700;
   color: rgb(57, 116, 255);
-  margin-bottom: 5px;
-  margin-top: 30px;
 }
 
 #deck-heading {
@@ -236,7 +242,7 @@ body {
   font-size: 1.2em;
   font-weight: 200;
   color: rgb(57, 116, 255);
-  margin: 15px 80px auto auto;
+  margin: 15px 130px auto auto;
 }
 
 /* Flip Card */
@@ -246,15 +252,23 @@ body {
     height: 350px;
     perspective: 1000px;
   }
+
+  .carousel-inner {
+    position: relative;
+    height: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 30px;
+    max-width: 355px;
+  }
   
   .flip-card-inner {
-    position: relative;
+    /* position: relative;
     width: 100%;
-    height: 100%;
+    height: 100%; */
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 10px;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 30px; */
   }
 
   .flip-card:hover .flip-card-inner {
@@ -296,3 +310,25 @@ body {
     text-decoration-thickness: 5px;
   }
   /* End - Flip Card */
+
+  .carousel-control-next {
+    margin-right: 80px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(184,184,184)' width='180' height='500' viewBox='0 0 30 30'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");  
+  }
+
+  .carousel-control-prev {
+   margin-left: -80px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(184,184,184)' width='180' height='500' viewBox='0 0 30 30'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  }
+
+  /* For mobile */
+  /* .carousel-control-next {
+    margin-right: 80px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(184,184,184)' width='180' height='500' viewBox='0 0 30 30'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");  
+  }
+
+  .carousel-control-prev {
+   margin-left: -80px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(184,184,184)' width='180' height='500' viewBox='0 0 30 30'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  } */
+  /* END For mobile */
